2003-09-03  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_13
	* nsd/tclinit.c (NsTclICtlObjCmd): Fix intermittant core dumps
        occurring during oncleanup processing.  The error is in the Tcl_Obj
	for the script passed into ns_ictl on* callbacks was being saved
	and passed to the callbacks (this Tcl_Obj was then being shared 
        amoung Interps, which is not allowed).
	Now, extract a copy of the script string, and pass that to the callbacks.

2003-08-27  Elizabeth Thomas  <eathomas93@aol.com>

	* nsd/adprequest.c: Complete 8/12 fix of not
        logging error for ns_adp_break

2003-08-26  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_12

2003-08-26  Elizabeth Thomas <eathomas93@aol.com>

        * nsd/tclinit.c: Fix the 'oncleanup' option of ns_ictl.
        Modify behavior of Ns_RegisterAtDelete so callbacks are
        run before the interp is destroyed. Expose with new 'ondelete'
        option to ns_ictl.

2003-08-25  Mark Page  <mpagenva@aol.com>

	* nsd/adprequest.c (): Suppress production of the result data for
	requests with SKIPBODY set.
	* nsd/return.c (ReturnCharData): Allow headers to be returned for
	requests with SKIPBODY; e.g., HEAD requests.

2003-08-21  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/tclfile.c: properly detach and attach the Tcl channel
	out and in the current interpreter.

2003-08-19  Rahul Bhargava <rahul032213@aol.com>

        * nsd/return.c: Updated to support HTTP/1.1 Transfer Chunk Encoding 
        Headers only.

2003-08-19  Nathan Folkman <shmooved@aol.com>

        * nsd/return.c: Updated to include status code from: 
        RFC 2616 (Hypertext Transfer Protocol -- HTTP/1.1) and
        RFC 2518 (HTTP Extensions for Distributed Authoring -- WEBDAV).

2003-08-12  Elizabeth Thomas <eathomas93@aol.com>

	* nsd/adprequest.c: Don't log ns_adp_abort or ns_adp_break as errors.

2003-08-08  Elizabeth Thomas <eathomas93@aol.com>

	* nsd/mimetypes.c: 